--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
+    "axios": "^0.18.0",
     "flow-bin": "^0.78.0",
     "node-sass-chokidar": "^1.3.3",
     "npm": "^6.3.0",
