--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,12 @@
 /build
 
 # misc
+.eslintrc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ignore css files
+*.css
