--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "http://drod21.github.io/portfolio",
+  "homepage": "http://drod21.github.io/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
@@ -9,7 +9,7 @@
     "axios": "^0.18.0",
     "flow-bin": "^0.78.0",
     "node-sass-chokidar": "^1.3.3",
-    "npm": "^6.3.0",
+    "npm": "^6.4.1",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
