--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "homepage": "http://drod21.github.io/",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
-    "@material-ui/icons": "^2.0.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "flow-bin": "^0.78.0",
-    "node-sass-chokidar": "^1.3.3",
     "npm": "^6.4.1",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -30,6 +28,8 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.0"
+    "gh-pages": "^2.0.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.5"
   }
 }
